<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_description"
        style="@style/text_view_style"
        android:hint="@string/hint_description"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_due_date"
        style="@style/text_view_style"
        android:editable="false"
        android:hint="@string/enter_date" />

    <EditText
        android:id="@+id/edit_amount"
        android:visibility="invisible"
        style="@style/text_view_style"
        android:hint="@string/amount_paid"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save"
        android:layout_marginTop="8dp"
        />
</LinearLayout>