<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorScreenBackground"
            tools:context=".activities.MainActivity"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/welcome_text"
                android:textSize="@dimen/activity_title_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <ImageButton
                    android:id="@+id/calendar_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_button_height"
                    android:layout_marginTop="@dimen/main_activity_text_margin"
                    android:onClick="goToCalendar"
                    app:layout_constraintEnd_toEndOf="@+id/calendar_button_text"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="@+id/calendar_button_text"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:srcCompat="@android:drawable/ic_menu_today" />

                <TextView
                    android:id="@+id/calendar_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar_button_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/home_button_text_size"
                    app:layout_constraintEnd_toEndOf="@+id/task_list_button"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/task_list_button"
                    app:layout_constraintTop_toBottomOf="@+id/calendar_button" />

                <ImageButton
                    android:id="@+id/task_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_button_height"
                    android:layout_marginTop="@dimen/main_activity_text_margin"
                    android:onClick="goToTasks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/task_list_text"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/task_list_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.513"
                    app:srcCompat="@android:drawable/checkbox_on_background" />

                <TextView
                    android:id="@+id/task_list_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_button_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/home_button_text_size"
                    app:layout_constraintEnd_toEndOf="@+id/groceries_button"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="@+id/groceries_button"
                    app:layout_constraintTop_toBottomOf="@+id/task_list_button"

                    />

                <ImageButton
                    android:id="@+id/groceries_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_button_height"
                    android:layout_marginTop="@dimen/main_activity_text_margin"
                    android:onClick="goToGroceries"
                    app:layout_constraintEnd_toEndOf="@+id/groceries_button_text"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/groceries_button_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/shopping_basket" />

                <TextView
                    android:id="@+id/groceries_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groceries_button_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/home_button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/groceries_button" />

                <ImageButton
                    android:id="@+id/funds_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_button_height"
                    android:layout_marginTop="@dimen/main_activity_text_margin"
                    android:onClick="goToFunds"
                    app:layout_constraintEnd_toEndOf="@+id/funds_button_text"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/funds_button_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/attach_money" />

                <TextView
                    android:id="@+id/funds_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_button_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/home_button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/funds_button" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
